fix for Surefire bug